@@ -1,4 +1,9 @@
+2006-03-25	Ingo Renner  <typo3@ingo-renner.com>
+
+	* ADD added support for ATOM 1.0 feeds, category support still missing
+
 2005-05-19	Rupert Germann <rupi@gmx.li>
+
 	* feature: added support for Workspaces in TYPO3 4.0
 	* fix: changed TYPO3_version and PHP_version in $emconf
 	* updated emconf: version nr is 2.2.40 now
